# saferun-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Procfile  QUICK_START.md  README.md  SLACK_SETUP.md  SafeRunProd.code-workspace  check_db.py  nixpacks.toml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start.sh  test_github_api_bypass.sh  test_local.py
.github/workflows/: tests.yml
.saferun/: config.yml
cli/: .gitignore  .npmignore  README.md  package.json  tsconfig.json
cli/examples/: README.md  basic-setup.md  ci-cd-setup.md  team-setup.md
cli/hooks/: post-checkout  pre-commit  pre-push  reference-transaction
cli/src/: hook-entry.ts  index.ts  register-commands.ts  version.ts
examples/: README.md  docker-compose.yml  github-example.json  notion-example.json
examples/autogpt/: README.md  saferun_command.py
examples/curl/: README.md  approve-change.sh  archive-repo.sh  delete-branch.sh  delete-repo.sh
examples/simple-agent/: README.md  cleanup_bot.py
saferun/: __init__.py  main.py
saferun/app/: __init__.py  crypto.py  db.py  db_adapter.py  db_postgres.py  main.py  metrics.py  notify.py  policy.py  storage.py
saferun/auth/: __init__.py
saferun/core/: __init__.py  risk.py
saferun/models/: __init__.py  models.py
saferun/providers/: __init__.py  github.py  notion.py
sdk/: README.md
tests/: __init__.py  conftest.py  test_approvals_auth.py  test_auth_helpers.py  test_basic.py  test_crypto.py  test_db_encryption.py  test_delete_repo_endpoint.py  test_github_provider.py  test_phase1_4.py
(+129 files in other folders)
